test/corpus/application_file.txt
===
Application file
===

HA$PBExportHeader$main_app.sra
$PBExportComments$Generated Application Object
forward
global type main_app from application
end type
type local_st_test from structure within main_app
end type
type ds_non_visual_object from n_ds within main_app
end type
global transaction sqlca
global dynamicdescriptionarea sqlda
global dynamicstagingarea sqlsa
global error error
global message message
end forward

type local_st_test from structure
	string		test
end type

shared variables

Integer si_MySharedIntegerVar = 0
end variables

global variables

Integer gi_MyGlobalIntegerVar = 0, teste = 1, op_teste
end variables

global type main_app from application
string appname = "main_app"
boolean toolbartext = true
string toolbarframetitle = "titlekkk"
string dwmessagetitle = "my_dwmessage"
integer ddetimeout = 4
string displayname = "my_display_name"
boolean righttoleft = true
event ue_custom_event_no_return_no_parm ( )
event ue_custom_event_no_return_parm ( integer ai_value,  ref integer ai_ref,  readonly integer ai_readonly )
event type integer ue_custom_event_return ( )
event ue_custom_event_throws ( ) throws exception
event ue_event_id_activate pbm_activate
ds_non_visual_object ds_non_visual_object
end type
global main_app main_app

type prototypes

FUNCTION int GetSystemMetrics (int index) LIBRARY "USER32.DLL" // Global
end prototypes

type variables

Private:
	Private Integer ii_MyInstanceIntegerVar = 0
end variables

forward prototypes
public function boolean postevent (string e)
public subroutine of_object_function_no_return ()
public function integer of_object_function_return () throws exception,excep_test
end prototypes

event ue_custom_event_no_return_no_parm();
return 
end event

event ue_custom_event_no_return_parm;
return 
end event

event type integer ue_custom_event_return();
return 1
end event

event ue_custom_event_throws();
Exception le_NewException

le_NewException = Create Exception
le_NewException.SetMessage('Custom New Exception')

Throw le_NewException
end event

event ue_event_id_activate;
return 1
end event

public function boolean postevent (string e);
return true
end function

public subroutine of_object_function_no_return ();
return
end subroutine

public function integer of_object_function_return () throws exception,excep_test;
return 1 
end function

on main_app.create
appname="main_app"
message=create message
sqlca=create transaction
sqlda=create dynamicdescriptionarea
sqlsa=create dynamicstagingarea
error=create error
this.ds_non_visual_object=create ds_non_visual_object
end on

on main_app.destroy
destroy(sqlca)
destroy(sqlda)
destroy(sqlsa)
destroy(error)
destroy(message)
destroy(this.ds_non_visual_object)
end on

event open;
n_descendent_one ln_Des

ln_Des = Create n_descendent_one

MessageBox('', ln_Des.of_func())
end event

type ds_non_visual_object from n_ds within main_app descriptor "pb_nvo" = "true" 
event type long ue_object_component_custom_event ( integer ai_value ) throws exception
integer ii_dsinstancevar = 2
end type

event type long ue_object_component_custom_event(integer ai_value);
return 1
end event

event constructor;
end event

on ds_non_visual_object.create
call super::create
end on

on ds_non_visual_object.destroy
call super::destroy
end on

---

(source_file
  (export_header
    (export_header_identifier
      (export_header_identifier_text)
      (export_header_identifier_content
        (file_name)
        (file_extension
          (application_file_extension))))
    (export_header_comments
      (export_header_comments_text)
      (export_header_comments_content)))
  (class_file
    (forward_declaration_section
      (forward_declaration_statement)
      (forward_declaration_statement_body
        (class_type_definition
          (class_type_definition_statement
            (global_keyword)
            (type_keyword)
            (class_type_name)
            (from_keyword)
            (ancenstor_type_name))
          (end_type_declaration_statement
            (end_keyword)
            (type_keyword)))
        (class_type_definition
          (class_type_definition_statement
            (type_keyword)
            (class_type_name)
            (from_keyword)
            (ancenstor_type_name)
            (within_keyword)
            (parent_class))
          (end_type_declaration_statement
            (end_keyword)
            (type_keyword)))
        (class_type_definition
          (class_type_definition_statement
            (type_keyword)
            (class_type_name)
            (from_keyword)
            (ancenstor_type_name)
            (within_keyword)
            (parent_class))
          (end_type_declaration_statement
            (end_keyword)
            (type_keyword)))
        (global_variable_declaration
          (global_keyword)
          (type
            (custom_type))
          (variable_name))
        (global_variable_declaration
          (global_keyword)
          (type
            (custom_type))
          (variable_name))
        (global_variable_declaration
          (global_keyword)
          (type
            (custom_type))
          (variable_name))
        (global_variable_declaration
          (global_keyword)
          (type
            (custom_type))
          (variable_name))
        (global_variable_declaration
          (global_keyword)
          (type
            (custom_type))
          (variable_name)))
      (forward_declaration_statement_end
        (end_keyword)
        (forward_keyword)))
    (structure_definition
      (structure_definition_statement
        (type_keyword)
        (structure_name)
        (from_keyword))
      (structure_definition_body
        (structure_field
          (type
            (primitive_type))
          (field_name)))
      (end_type_declaration_statement
        (end_keyword)
        (type_keyword)))
    (shared_variables_section
      (shared_variables_section_statement
        (shared_keyword)
        (variables_keyword))
      (shared_variables_section_body
        (local_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
              (initial_value
                (integer_literal))))))
      (end_variables_section
        (end_keyword)
        (variables_keyword)))
    (global_variables_section
      (global_variables_section_statement
        (global_keyword)
        (variables_keyword))
      (global_variables_section_body
        (local_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
              (initial_value
                (integer_literal)))
            (variable_declaration
              (variable_name)
              (initial_value
                (integer_literal)))
            (variable_declaration
              (variable_name)))))
      (end_variables_section
        (end_keyword)
        (variables_keyword)))
    (class_type_definition
      (class_type_definition_statement
        (global_keyword)
        (type_keyword)
        (class_type_name)
        (from_keyword)
        (ancenstor_type_name))
      (class_type_definition_statement_body
        (inner_class_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
              (initial_value
                (string_literal
                  (double_quote)
                  (string_content)
                  (double_quote))))))
        (inner_class_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
              (initial_value
                (boolean_literal
                  (true_keyword))))))
        (inner_class_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
              (initial_value
                (string_literal
                  (double_quote)
                  (string_content)
                  (double_quote))))))
        (inner_class_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
              (initial_value
                (string_literal
                  (double_quote)
                  (string_content)
                  (double_quote))))))
        (inner_class_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
              (initial_value
                (integer_literal)))))
        (inner_class_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
              (initial_value
                (string_literal
                  (double_quote)
                  (string_content)
                  (double_quote))))))
        (inner_class_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
              (initial_value
                (boolean_literal
                  (true_keyword))))))
        (event_declaration
          (event_keyword)
          (event_name)
          (parameter_list
            (open_parenthesis)
            (close_parenthesis)))
        (event_declaration
          (event_keyword)
          (event_name)
          (parameter_list
            (open_parenthesis)
            (parameter
              (type
                (primitive_type))
              (parameter_name))
            (parameter
              (parameter_pass_by_type)
              (type
                (primitive_type))
              (parameter_name))
            (parameter
              (parameter_pass_by_type)
              (type
                (primitive_type))
              (parameter_name))
            (close_parenthesis)))
        (event_declaration
          (event_keyword)
          (type_keyword)
          (return_type
            (primitive_type))
          (event_name)
          (parameter_list
            (open_parenthesis)
            (close_parenthesis)))
        (event_declaration
          (event_keyword)
          (event_name)
          (parameter_list
            (open_parenthesis)
            (close_parenthesis))
          (throws_clause
            (throws_keyword)
            (throwable_name)))
        (event_declaration
          (event_keyword)
          (event_name)
          (event_id))
        (inner_class_variable_declaration
          (variable_type
            (custom_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)))))
      (end_type_declaration_statement
        (end_keyword)
        (type_keyword)))
    (global_var_declaration
      (global_keyword)
      (type
        (custom_type))
      (global_variable_name))
    (external_function_prototypes
      (external_function_prototypes_statement
        (type_keyword)
        (prototypes_keyword))
      (external_function_prototype
        (function_prototype
          (function_keyword)
          (return_type
            (primitive_type))
          (function_name)
          (parameter_list
            (open_parenthesis)
            (parameter
              (type
                (primitive_type))
              (parameter_name))
            (close_parenthesis)))
        (library_keyword)
        (library_name
          (double_quote)
          (string_content)
          (double_quote)))
      (line_comment)
      (end_function_prototypes_statement
        (end_keyword)
        (prototypes_keyword)))
    (instance_variables_section
      (instance_variables_section_statement
        (type_keyword)
        (variables_keyword))
      (instance_variables_section_statement_body
        (access_section
          (access_modifier
            (private_keyword)))
        (instance_variable_declaration
          (access_modifier
            (private_keyword))
          (local_variable_declaration
            (variable_type
              (primitive_type))
            (variable_declaration_list
              (variable_declaration
                (variable_name)
                (initial_value
                  (integer_literal)))))))
      (end_variables_section
        (end_keyword)
        (variables_keyword)))
    (forward_function_prototypes
      (forward_function_prototypes_statement
        (forward_keyword)
        (prototypes_keyword))
      (function_prototype
        (access_modifier
          (public_keyword))
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (parameter
            (type
              (primitive_type))
            (parameter_name))
          (close_parenthesis)))
      (function_prototype
        (access_modifier
          (public_keyword))
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis)))
      (function_prototype
        (access_modifier
          (public_keyword))
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (throws_clause
          (throws_keyword)
          (throwable_name)
          (throwable_name)))
      (end_function_prototypes_statement
        (end_keyword)
        (prototypes_keyword)))
    (event_definition
      (event_definition_statement
        (event_declaration
          (event_keyword)
          (event_name)
          (parameter_list
            (open_parenthesis)
            (close_parenthesis)))
        (statement_separation))
      (event_definition_block
        (statement
          (inline_statement
            (return_statement
              (return_keyword)))))
      (event_definition_statement_end
        (end_keyword)
        (event_keyword)))
    (event_definition
      (event_definition_statement
        (event_declaration
          (event_keyword)
          (event_name))
        (statement_separation))
      (event_definition_block
        (statement
          (inline_statement
            (return_statement
              (return_keyword)))))
      (event_definition_statement_end
        (end_keyword)
        (event_keyword)))
    (event_definition
      (event_definition_statement
        (event_declaration
          (event_keyword)
          (type_keyword)
          (return_type
            (primitive_type))
          (event_name)
          (parameter_list
            (open_parenthesis)
            (close_parenthesis)))
        (statement_separation))
      (event_definition_block
        (statement
          (inline_statement
            (return_statement
              (return_keyword)
              (return_value
                (integer_literal))))))
      (event_definition_statement_end
        (end_keyword)
        (event_keyword)))
    (event_definition
      (event_definition_statement
        (event_declaration
          (event_keyword)
          (event_name)
          (parameter_list
            (open_parenthesis)
            (close_parenthesis)))
        (statement_separation))
      (event_definition_block
        (statement
          (local_variable_declaration_statement
            (local_variable_declaration
              (variable_type
                (custom_type))
              (variable_declaration_list
                (variable_declaration
                  (variable_name))))))
        (statement
          (inline_statement
            (create_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (create_keyword)
              (type
                (custom_type)))))
        (statement
          (inline_statement
            (expression_statement
              (method_invocation
                (method_object
                  (l_value_expression
                    (identifier_expression
                      (identifier))))
                (operator)
                (method_name)
                (argument_list
                  (open_parenthesis)
                  (r_value_expression
                    (string_literal
                      (single_quote)
                      (string_content)
                      (single_quote)))
                  (close_parenthesis))))))
        (statement
          (inline_statement
            (throw_statement
              (throw_keyword)
              (r_value_expression
                (l_value_expression
                  (identifier_expression
                    (identifier))))))))
      (event_definition_statement_end
        (end_keyword)
        (event_keyword)))
    (event_definition
      (event_definition_statement
        (event_declaration
          (event_keyword)
          (event_name))
        (statement_separation))
      (event_definition_block
        (statement
          (inline_statement
            (return_statement
              (return_keyword)
              (return_value
                (integer_literal))))))
      (event_definition_statement_end
        (end_keyword)
        (event_keyword)))
    (function_definition
      (function_definition_statement
        (access_modifier
          (public_keyword))
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (parameter
            (type
              (primitive_type))
            (parameter_name))
          (close_parenthesis))
        (statement_separation))
      (function_definition_block
        (statement
          (inline_statement
            (return_statement
              (return_keyword)
              (return_value
                (boolean_literal
                  (true_keyword)))))))
      (function_definition_statement_end
        (end_keyword)
        (function_keyword)))
    (function_definition
      (subroutine_definition_statement
        (access_modifier
          (public_keyword))
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (inline_statement
            (return_statement
              (return_keyword)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))
    (function_definition
      (function_definition_statement
        (access_modifier
          (public_keyword))
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (throws_clause
          (throws_keyword)
          (throwable_name)
          (throwable_name))
        (statement_separation))
      (function_definition_block
        (statement
          (inline_statement
            (return_statement
              (return_keyword)
              (return_value
                (integer_literal))))))
      (function_definition_statement_end
        (end_keyword)
        (function_keyword)))
    (on_event_definition
      (on_event_definition_statement
        (on_keyword)
        (class_name)
        (create_keyword))
      (on_event_definition_block
        (statement
          (inline_statement
            (assignment_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (operator)
              (r_value
                (string_literal
                  (double_quote)
                  (string_content)
                  (double_quote))))))
        (statement
          (inline_statement
            (create_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (create_keyword)
              (type
                (custom_type)))))
        (statement
          (inline_statement
            (create_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (create_keyword)
              (type
                (custom_type)))))
        (statement
          (inline_statement
            (create_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (create_keyword)
              (type
                (custom_type)))))
        (statement
          (inline_statement
            (create_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (create_keyword)
              (type
                (custom_type)))))
        (statement
          (inline_statement
            (create_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (create_keyword)
              (type
                (custom_type)))))
        (statement
          (inline_statement
            (create_statement
              (l_value
                (field_access
                  (object
                    (this_keyword))
                  (field_name)))
              (create_keyword)
              (type
                (custom_type))))))
      (on_event_definition_statement_end
        (end_keyword)
        (on_keyword)))
    (on_event_definition
      (on_event_definition_statement
        (on_keyword)
        (class_name)
        (destroy_keyword))
      (on_event_definition_block
        (statement
          (inline_statement
            (destroy_statement
              (destroy_keyword)
              (open_parenthesis)
              (variable_name
                (l_value_expression
                  (identifier_expression
                    (identifier))))
              (close_parenthesis))))
        (statement
          (inline_statement
            (destroy_statement
              (destroy_keyword)
              (open_parenthesis)
              (variable_name
                (l_value_expression
                  (identifier_expression
                    (identifier))))
              (close_parenthesis))))
        (statement
          (inline_statement
            (destroy_statement
              (destroy_keyword)
              (open_parenthesis)
              (variable_name
                (l_value_expression
                  (identifier_expression
                    (identifier))))
              (close_parenthesis))))
        (statement
          (inline_statement
            (destroy_statement
              (destroy_keyword)
              (open_parenthesis)
              (variable_name
                (l_value_expression
                  (identifier_expression
                    (identifier))))
              (close_parenthesis))))
        (statement
          (inline_statement
            (destroy_statement
              (destroy_keyword)
              (open_parenthesis)
              (variable_name
                (l_value_expression
                  (identifier_expression
                    (identifier))))
              (close_parenthesis))))
        (statement
          (inline_statement
            (destroy_statement
              (destroy_keyword)
              (open_parenthesis)
              (variable_name
                (l_value_expression
                  (field_access
                    (object
                      (this_keyword))
                    (field_name))))
              (close_parenthesis)))))
      (on_event_definition_statement_end
        (end_keyword)
        (on_keyword)))
    (event_definition
      (event_definition_statement
        (event_declaration
          (event_keyword)
          (event_name))
        (statement_separation))
      (event_definition_block
        (statement
          (local_variable_declaration_statement
            (local_variable_declaration
              (variable_type
                (custom_type))
              (variable_declaration_list
                (variable_declaration
                  (variable_name))))))
        (statement
          (inline_statement
            (create_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (create_keyword)
              (type
                (custom_type)))))
        (statement
          (inline_statement
            (expression_statement
              (method_invocation
                (method_name)
                (argument_list
                  (open_parenthesis)
                  (r_value_expression
                    (string_literal
                      (single_quote)
                      (single_quote)))
                  (r_value_expression
                    (method_invocation
                      (method_object
                        (l_value_expression
                          (identifier_expression
                            (identifier))))
                      (operator)
                      (method_name)
                      (argument_list
                        (open_parenthesis)
                        (close_parenthesis))))
                  (close_parenthesis)))))))
      (event_definition_statement_end
        (end_keyword)
        (event_keyword)))
    (class_type_definition
      (class_type_definition_statement
        (type_keyword)
        (class_type_name)
        (from_keyword)
        (ancenstor_type_name)
        (within_keyword)
        (parent_class)
        (descriptor_keyword)
        (descriptor_type
          (double_quote)
          (string_content)
          (double_quote))
        (descriptor_value
          (double_quote)
          (string_content)
          (double_quote)))
      (class_type_definition_statement_body
        (event_declaration
          (event_keyword)
          (type_keyword)
          (return_type
            (primitive_type))
          (event_name)
          (parameter_list
            (open_parenthesis)
            (parameter
              (type
                (primitive_type))
              (parameter_name))
            (close_parenthesis))
          (throws_clause
            (throws_keyword)
            (throwable_name)))
        (inner_class_variable_declaration
          (variable_type
            (primitive_type))
          (variable_declaration_list
            (variable_declaration
              (variable_name)
